# cross-chain-aggr

./: Anchor.toml  package.json
frontend/: README.md  craco.config.js  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: CrossChainBridge.tsx  Dashboard.tsx  Dashboard3D.tsx
frontend/src/components/3D/: ChainOrb.tsx  CrossChainScene.tsx  DataStreams.tsx  EnergyField.tsx  FloatingParticles.tsx  HolographicDisplay.tsx  PortalEffect.tsx
frontend/src/contexts/: WalletContext.tsx
frontend/src/idl/: cross_chain_yield_aggregator.json  cross_chain_yield_aggregator.ts
frontend/src/utils/: contract.ts
programs/cross_chain_yield_aggregator/: Cargo.toml
programs/cross_chain_yield_aggregator/src/: lib.rs
tests/: comprehensive-test.ts  cross_chain_yield_aggregator.ts
